--- a/index.html
+++ b/index.html
@@ -1,50 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single Price Grid Component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@400;700&display=swap" rel="stylesheet">
+    <!--<link rel="stylesheet" href="normalize.css">-->
+    <title>Single Price Grid Component</title>
 </head>
 <body>
-  Join our community
-
-  30-day, hassle-free money back guarantee
-
-  Gain access to our full library of tutorials along with expert code reviews. 
-  Perfect for any developers who are serious about honing their skills.
-
-  Monthly Subscription
-
-  &dollar;29 per month
-
-  Full access for less than &dollar;1 a day
-
-  Sign Up
-
-  Why Us
-
-  Tutorials by industry experts
-  Peer &amp; expert code review
-  Coding exercises
-  Access to our GitHub repos
-  Community forum
-  Flashcard decks
-  New videos every week
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+    
+    <div class="container">
+        <div class="card">
+        <div class="col-1">
+        <div class="top">
+            <h2>Join our community</h2>
+            </div>
+            <div class="mid">
+            <h3 id="promo">30 day, hassle-free money back guarantee</h3>
+        </div>
+        <div class="bottom">
+            <p>
+                Gain access to our full library of tutorials along with expert code reviews. 
+                Perfect for any developers who are serious about honiing their skills.
+            </p>
+        </div>
+        </div><!--End col-1-->
+        <div class="col-2">
+        <div class="left">
+            <div class="top">
+            <h3>Monthly Subcription</h3>
+        </div>
+        <div class="mid">
+            <p>
+                <span class="price">$29</span><span class="duration">per month</span><br>
+                <span class="full-accesss">Full access for less than $1 a day</span>
+            </p>
+        </div>
+        <div class="bottom">
+            <button>Sign Up</button>
+            </div>
+        </div>
+        <div class="right">
+            <div class="top">
+            <h3>Why Us</h3>
+            </div>
+            <div class="buttom">
+            <ul>
+                <li>Tutorials by industry experts</li>
+                <li>Peer and expert code reviews</li>
+                <li>Coding exercises</li>
+                <li>Access to our GitHub repos</li>
+                <li>Community forums</li>
+                <li>Flashcard decks</li>
+                <li>New videos every week</li>
+            </ul>
+           </div><!--End buttom-->
+        </div><!--End right-->
+    </div><!--End col-2-->
+</div><!--End card-->
+</div><!--End container-->
+    
 </body>
 </html>
