more style adjustments

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="bottom">
             <p>
                 Gain access to our full library of tutorials along with expert code reviews. 
-                Perfect for any developers who are serious about honiing their skills.
+                Perfect for any developers who are serious about honing their skills.
             </p>
         </div>
         </div><!--End col-1-->
@@ -35,7 +35,7 @@
         <div class="mid">
             <p>
                 <span class="price">$29</span><span class="duration">per month</span><br>
-                <span class="full-accesss">Full access for less than $1 a day</span>
+                <span class="full-access">Full access for less than $1 a day</span>
             </p>
         </div>
         <div class="bottom">
