fix firefox inner border and padding issue

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </p>
         </div>
         <div class="bottom">
-            <button>Sign Up</button>
+            <button type="button">Sign Up</button>
             </div>
         </div>
         <div class="right">
