--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,58 +10,66 @@
     <!--<link rel="stylesheet" href="normalize.css">-->
     <title>Single Price Grid Component</title>
 </head>
+
 <body>
-    
+
     <div class="container">
         <div class="card">
-        <div class="col-1">
-        <div class="top">
-            <h2>Join our community</h2>
+            <div class="col-1">
+                <div class="top">
+                    <h2>Join our community</h2>
+                </div>
+                <div class="mid">
+                    <h3 id="promo">30 day, hassle-free money back guarantee</h3>
+                </div>
+                <div class="bottom">
+                    <p>
+                        Gain access to our full library of tutorials along with expert code reviews.
+                        Perfect for any developers who are serious about honing their skills.
+                    </p>
+                </div>
             </div>
-            <div class="mid">
-            <h3 id="promo">30 day, hassle-free money back guarantee</h3>
-        </div>
-        <div class="bottom">
-            <p>
-                Gain access to our full library of tutorials along with expert code reviews. 
-                Perfect for any developers who are serious about honing their skills.
-            </p>
-        </div>
-        </div><!--End col-1-->
-        <div class="col-2">
-        <div class="left">
-            <div class="top">
-            <h3>Monthly Subcription</h3>
-        </div>
-        <div class="mid">
-            <p>
-                <span class="price">$29</span><span class="duration">per month</span><br>
-                <span class="full-access">Full access for less than $1 a day</span>
-            </p>
-        </div>
-        <div class="bottom">
-            <button type="button">Sign Up</button>
+            <!--End col-1-->
+            <div class="col-2">
+                <div class="left">
+                    <div class="top">
+                        <h3>Monthly Subcription</h3>
+                    </div>
+                    <div class="mid">
+                        <p>
+                            <span class="price">$29</span><span class="duration">per month</span><br>
+                            <span class="full-access">Full access for less than $1 a day</span>
+                        </p>
+                    </div>
+                    <div class="bottom">
+                        <button type="button">Sign Up</button>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="top">
+                        <h3>Why Us</h3>
+                    </div>
+                    <div class="buttom">
+                        <ul>
+                            <li>Tutorials by industry experts</li>
+                            <li>Peer and expert code reviews</li>
+                            <li>Coding exercises</li>
+                            <li>Access to our GitHub repos</li>
+                            <li>Community forums</li>
+                            <li>Flashcard decks</li>
+                            <li>New videos every week</li>
+                        </ul>
+                    </div>
+                    <!--End buttom-->
+                </div>
+                <!--End right-->
             </div>
+            <!--End col-2-->
         </div>
-        <div class="right">
-            <div class="top">
-            <h3>Why Us</h3>
-            </div>
-            <div class="buttom">
-            <ul>
-                <li>Tutorials by industry experts</li>
-                <li>Peer and expert code reviews</li>
-                <li>Coding exercises</li>
-                <li>Access to our GitHub repos</li>
-                <li>Community forums</li>
-                <li>Flashcard decks</li>
-                <li>New videos every week</li>
-            </ul>
-           </div><!--End buttom-->
-        </div><!--End right-->
-    </div><!--End col-2-->
-</div><!--End card-->
-</div><!--End container-->
-    
+        <!--End card-->
+    </div>
+    <!--End container-->
+
 </body>
+
 </html>
