--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@
             <!--End col-2-->
         </div>
         <!--End card-->
+    <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="#">Albert Kombol</a>.
     </div>
-    <!--End container-->
-
+  </div>
+    <!--End container-->      
 </body>
 
 </html>
